doc: Java 17 対応手順の英語版を作成